css/style.css
#main-area {
    display: grid;
}

#sidebar {
    height: 100%;
    width: 500px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow-x: hidden;
    padding-top: 48px;
    padding-left: 20px;
}

#display-area {
    width: 100%;
    
}

.board {
    margin: 0 auto;
    max-width: 650px;
    /* max-height: 300px; */
    max-height: 600px;
}

.canvas {
    /* border:black 1px solid; */
    border-color: black;
    border-style: solid;
    width:300px;
    height: 300px;
    display: inline-block;
}

.menu-item {
    display: inline-block;
    /* border:black 1px solid; */
    width:75px;
    height:75px;
    cursor: pointer;
}


#nw-canvas{
    border-width: 1px 0px 0px 1px;
}
#ne-canvas{
    border-width: 1px 1px 0px 0px;
}
#se-canvas{
    border-width: 0px 1px 1px 0px;
}
#sw-canvas{
    border-width: 0px 0px 1px 1px;
}

.canvas-img {
    width: 100%;
    height: 100%;
    vertical-align: 0;
}

.st23{fill:#E63634;}
#main-canvas{
    height: 600px;
    width: 600px;
}

